--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 
 {
-  "name": "KEITH-MD",
+  "name": "VENOCYBER-MD",
   "version": "2.0.0",
   "description": "",
   "main": "index.js",
@@ -15,10 +15,10 @@
   "keywords": [
     "bot",
     "Baileys",
-    "keith-Md",
+    "venocyber-Md",
     "whatsapp",
     "whatsapp-bot",
-    "keithkeizzah"
+    "rajola"
   ],
   "author": "keithkeizzah",
   "license": "ISC",
