--- a/app.json
+++ b/app.json
@@ -1,10 +1,10 @@
 {
-  "name": "KEITH-MD",
+  "name": "VENOCYBER-MD",
   "description": "This is a simple whatsapp bot built with nodejs to make your WhatsApp enjoyable",
   "keywords": [
     "bot",
     "whatsapp",
-    "keith",
+    "venocyber",
     "whatsapp-stickers",
     "anime",
     "whatsapp-bot",
